<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 Felix Bechstein -->
<!--
		This file is part of Portal Timer. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/cooldown_title" >
        <EditTextPreference
            android:defaultValue="@string/cooldown"
            android:key="cooldown0"
            android:summary="@string/cooldown_0_summary"
            android:title="@string/cooldown_0" />
        <EditTextPreference
            android:defaultValue="@string/cooldown"
            android:key="cooldown1"
            android:summary="@string/cooldown_1_summary"
            android:title="@string/cooldown_1" />
        <EditTextPreference
            android:defaultValue="@string/cooldown"
            android:key="cooldown2"
            android:summary="@string/cooldown_2_summary"
            android:title="@string/cooldown_2" />
    </PreferenceCategory>

</PreferenceScreen>