<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 Felix Bechstein -->
<!--
		This file is part of Portal Timer. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:summary="@string/more_apps_summary"
        android:title="@string/more_apps" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/more_apps_url" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/donate" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/donate_url" />
    </PreferenceScreen>

</PreferenceScreen>